Rewrite all return statments with Object Mapper deserializing

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>javax.transaction-api</artifactId>
             <version>1.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-moxy -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-moxy</artifactId>
+            <version>2.26</version>
+        </dependency>
     </dependencies>
 
 
